Mon Jun 13 09:56:29 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Update version to 1.3.0.

Mon Jun 13 09:42:50 GMT 2011  Olly Betts <olly@survex.com>

	* docs/termprefixes.rst: Update reference to flint.`

Mon Jun 13 08:00:16 GMT 2011  Olly Betts <olly@survex.com>

	* docs/termprefixes.rst: Expand to document mapping a user prefix to
	  multiple term prefixes.

Mon Jun 13 03:23:47 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Improve documentation of htdig_noindex.

Sun Jun 12 11:52:29 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Final update for 1.2.6.

Fri Jun 10 12:02:32 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update in preparation for 1.2.6.

Fri Jun 10 03:28:33 GMT 2011  Olly Betts <olly@survex.com>

	* templates/inc/anyallexactradio: Remove unused duplicate of
	  anyallradio.

Fri Jun 10 03:21:25 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac,omindex-config.cc,omindex-config.html: Strip out partly
	  written and long untouched omindex-config utility.

Thu Jun 09 14:20:46 GMT 2011  Olly Betts <olly@survex.com>

	* weight.cc: Fix a compiler warning (I failed to note the compiler
	  unfortunately).

Sun May 29 13:00:26 GMT 2011  Olly Betts <olly@survex.com>

	* templates/query: Make search query input type=search.

Sun May 29 12:24:43 GMT 2011  Olly Betts <olly@survex.com>

	* templates/query: Autofocus the search query input (using HTML
	  autofocus attribute with Javascript fallback for older browsers).
	  (ticket#544)

Wed May 25 14:33:18 GMT 2011  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Correct the documentation of the colours used by
	  $highlight{}.

Fri May 13 05:50:35 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Add using unoconv as more complex example of
	  using --filter (ticket#324).

Wed Apr 20 07:00:56 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Fix typo; clarify wording.

Mon Apr 04 13:58:06 GMT 2011  Olly Betts <olly@survex.com>
