@@ -1,3 +1,9 @@
+Mon Jun 13 12:24:32 GMT 2011  Olly Betts <olly@survex.com>
+
+	* scriptindex.cc: Remove error warning that index=nopos was replaced
+	  with indexnopos - this was removed in 1.1.0 so there's been enough
+	  time to upgrade.
+
 Mon Jun 13 09:56:29 GMT 2011  Olly Betts <olly@survex.com>
 
 	* configure.ac: Update version to 1.3.0.
